--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/ecommerce
 JWT_SECRET=JWTSecretKey
+EMAIL_USER=internteam32@gmail.com
+EMAIL_PASS=mnjipxcijzralbca
